# vfxnaming

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  coverage.lcov  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/workflows/: ci_vfxnaming.yml  release.yml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  credits.rst  index.rst  logger.rst  repositories.rst  roadmap.rst  rules.rst  separators.rst  session.rst  tokens.rst  vfxnaming.rst
docs/source/usage/: parsing.rst  repositories.rst  solving.rst  validating.rst
naming/: naming.py
src/cgx_naming/: __init__.py  logger.py  naming.py  rules.py  separators.py  serialize.py  tokens.py
src/cgx_naming/cfg/: config.json
src/naming/: __init__.py  naming.py  rules.py  separators.py  serialize.py  tokens.py
src/vfxnaming/: __init__.py  _vesion.py  error.py  logger.py  naming.py  rules.py  separators.py  serialize.py  testing.py  tokens.py
src/vfxnaming/cfg/: config.json
tests/: naming_test.py  rules_test.py  separators_test.py  tokens_test.py
